build/log/idf_py_stdout_output_32587
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /workspaces/project-name/build/bootloader/esp-idf/esptool_py && /opt/esp/python_env/idf6.0_py3.12_env/bin/python /opt/esp/idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /workspaces/project-name/build/bootloader/bootloader.bin
Bootloader binary size 0x66a0 bytes. 0x960 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/real_time_stats_example_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/real_time_stats_example_main.c.obj 
ccache /opt/esp/tools/xtensa-esp-elf/esp-15.1.0_20250607/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0-dev-1002-gbfe5caf58f\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/workspaces/project-name/build/config -I/workspaces/project-name/main -I/opt/esp/idf/components/newlib/platform_include -I/opt/esp/idf/components/freertos/config/include -I/opt/esp/idf/components/freertos/config/include/freertos -I/opt/esp/idf/components/freertos/config/xtensa/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/opt/esp/idf/components/freertos/esp_additions/include -I/opt/esp/idf/components/esp_hw_support/include -I/opt/esp/idf/components/esp_hw_support/include/soc -I/opt/esp/idf/components/esp_hw_support/include/soc/esp32 -I/opt/esp/idf/components/esp_hw_support/dma/include -I/opt/esp/idf/components/esp_hw_support/ldo/include -I/opt/esp/idf/components/esp_hw_support/debug_probe/include -I/opt/esp/idf/components/esp_hw_support/mspi_timing_tuning/include -I/opt/esp/idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/opt/esp/idf/components/esp_hw_support/power_supply/include -I/opt/esp/idf/components/esp_hw_support/port/esp32/. -I/opt/esp/idf/components/esp_hw_support/port/esp32/include -I/opt/esp/idf/components/heap/include -I/opt/esp/idf/components/heap/tlsf -I/opt/esp/idf/components/log/include -I/opt/esp/idf/components/soc/include -I/opt/esp/idf/components/soc/esp32 -I/opt/esp/idf/components/soc/esp32/include -I/opt/esp/idf/components/soc/esp32/register -I/opt/esp/idf/components/hal/platform_port/include -I/opt/esp/idf/components/hal/esp32/include -I/opt/esp/idf/components/hal/include -I/opt/esp/idf/components/esp_rom/include -I/opt/esp/idf/components/esp_rom/esp32/include -I/opt/esp/idf/components/esp_rom/esp32/include/esp32 -I/opt/esp/idf/components/esp_rom/esp32 -I/opt/esp/idf/components/esp_common/include -I/opt/esp/idf/components/esp_system/include -I/opt/esp/idf/components/esp_system/port/soc -I/opt/esp/idf/components/esp_system/port/include/private -I/opt/esp/idf/components/xtensa/esp32/include -I/opt/esp/idf/components/xtensa/include -I/opt/esp/idf/components/xtensa/deprecated_include -I/opt/esp/idf/components/esp_timer/include -I/opt/esp/idf/components/lwip/include -I/opt/esp/idf/components/lwip/include/apps -I/opt/esp/idf/components/lwip/include/apps/sntp -I/opt/esp/idf/components/lwip/lwip/src/include -I/opt/esp/idf/components/lwip/port/include -I/opt/esp/idf/components/lwip/port/freertos/include -I/opt/esp/idf/components/lwip/port/esp32xx/include -I/opt/esp/idf/components/lwip/port/esp32xx/include/arch -I/opt/esp/idf/components/lwip/port/esp32xx/include/sys -I/opt/esp/idf/components/driver/deprecated -I/opt/esp/idf/components/driver/i2c/include -I/opt/esp/idf/components/driver/touch_sensor/include -I/opt/esp/idf/components/driver/twai/include -I/opt/esp/idf/components/driver/touch_sensor/esp32/include -I/opt/esp/idf/components/esp_pm/include -I/opt/esp/idf/components/esp_ringbuf/include -I/opt/esp/idf/components/esp_driver_gpio/include -I/opt/esp/idf/components/esp_driver_pcnt/include -I/opt/esp/idf/components/esp_driver_gptimer/include -I/opt/esp/idf/components/esp_driver_spi/include -I/opt/esp/idf/components/esp_driver_mcpwm/include -I/opt/esp/idf/components/esp_driver_ana_cmpr/include -I/opt/esp/idf/components/esp_driver_i2s/include -I/opt/esp/idf/components/esp_driver_sdmmc/include -I/opt/esp/idf/components/esp_driver_sdmmc/legacy/include -I/opt/esp/idf/components/esp_driver_sd_intf/include -I/opt/esp/idf/components/sdmmc/include -I/opt/esp/idf/components/esp_driver_sdspi/include -I/opt/esp/idf/components/esp_driver_sdio/include -I/opt/esp/idf/components/esp_driver_dac/include -I/opt/esp/idf/components/esp_driver_rmt/include -I/opt/esp/idf/components/esp_driver_tsens/include -I/opt/esp/idf/components/esp_driver_sdm/include -I/opt/esp/idf/components/esp_driver_i2c/include -I/opt/esp/idf/components/esp_driver_uart/include -I/opt/esp/idf/components/vfs/include -I/opt/esp/idf/components/esp_driver_ledc/include -I/opt/esp/idf/components/esp_driver_parlio/include -I/opt/esp/idf/components/esp_driver_usb_serial_jtag/include -I/opt/esp/idf/components/esp_driver_twai/include -mlongcalls -Wno-frame-address -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/workspaces/project-name=. -fmacro-prefix-map=/opt/esp/idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/real_time_stats_example_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/real_time_stats_example_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/real_time_stats_example_main.c.obj -c /workspaces/project-name/main/real_time_stats_example_main.c
In file included from /workspaces/project-name/main/real_time_stats_example_main.c:18:
/workspaces/project-name/main/config_sched_eval.h:168:9: warning: 'RESPONSE_TIME_THRESHOLD' redefined
  168 | #define RESPONSE_TIME_THRESHOLD       1000  // Response time threshold (ms)
      |         ^~~~~~~~~~~~~~~~~~~~~~~
/workspaces/project-name/main/config_sched_eval.h:84:9: note: this is the location of the previous definition
   84 | #define RESPONSE_TIME_THRESHOLD 5000    // Response time warning threshold (μs)
      |         ^~~~~~~~~~~~~~~~~~~~~~~
/workspaces/project-name/main/real_time_stats_example_main.c: In function 'stats_task':
/workspaces/project-name/main/real_time_stats_example_main.c:688:16: error: format '%lu' expects argument of type 'long unsigned int', but argument 2 has type 'int' [-Werror=format=]
  688 |         printf("\n\nGetting real time stats over %"PRIu32" ticks\n", STATS_TICKS);
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/workspaces/project-name/main/real_time_stats_example_main.c: At top level:
/workspaces/project-name/main/real_time_stats_example_main.c:510:13: warning: 'display_dashboard' defined but not used [-Wunused-function]
  510 | static void display_dashboard(void) {
      |             ^~~~~~~~~~~~~~~~~
/workspaces/project-name/main/real_time_stats_example_main.c:401:13: warning: 'sensor_task' defined but not used [-Wunused-function]
  401 | static void sensor_task(void *param) {
      |             ^~~~~~~~~~~
/workspaces/project-name/main/real_time_stats_example_main.c:348:13: warning: 'calculation_task' defined but not used [-Wunused-function]
  348 | static void calculation_task(void *param) {
      |             ^~~~~~~~~~~~~~~~
/workspaces/project-name/main/real_time_stats_example_main.c:307:13: warning: 'led_task' defined but not used [-Wunused-function]
  307 | static void led_task(void *param) {
      |             ^~~~~~~~
/workspaces/project-name/main/real_time_stats_example_main.c:258:13: warning: 'configure_scheduling_mode' defined but not used [-Wunused-function]
  258 | static void configure_scheduling_mode(scheduling_mode_t mode) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
/workspaces/project-name/main/real_time_stats_example_main.c:193:13: warning: 'init_task_metrics' defined but not used [-Wunused-function]
  193 | static void init_task_metrics(task_metrics_t* metrics, const char* name) {
      |             ^~~~~~~~~~~~~~~~~
/workspaces/project-name/main/real_time_stats_example_main.c:147:21: warning: 'metrics_task_handle' defined but not used [-Wunused-variable]
  147 | static TaskHandle_t metrics_task_handle = NULL;
      |                     ^~~~~~~~~~~~~~~~~~~
/workspaces/project-name/main/real_time_stats_example_main.c:141:22: warning: 'event_queue' defined but not used [-Wunused-variable]
  141 | static QueueHandle_t event_queue;
      |                      ^~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
